{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 374,
  "lineage": "c2b8e637-aab8-2084-66ee-43d2cb5df765",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474489807730:internet-gateway/igw-0309badb348bdd924",
            "id": "igw-0309badb348bdd924",
            "owner_id": "474489807730",
            "tags": {
              "Name": "InternetGateway"
            },
            "tags_all": {
              "Name": "InternetGateway"
            },
            "vpc_id": "vpc-083069656b42e95cd"
          },
          "dependencies": [
            "module.ec2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0309badb348bdd924",
            "id": "r-rtb-09f80c7d0ec5e211c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09f80c7d0ec5e211c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_internet_gateway.default",
            "module.ec2.aws_route_table.public",
            "module.ec2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474489807730:route-table/rtb-09f80c7d0ec5e211c",
            "id": "rtb-09f80c7d0ec5e211c",
            "owner_id": "474489807730",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0309badb348bdd924",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRoute"
            },
            "tags_all": {
              "Name": "PublicRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-083069656b42e95cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0959c7221c6dab351",
            "route_table_id": "rtb-09f80c7d0ec5e211c",
            "subnet_id": "subnet-03b47e2d61d899fa2"
          },
          "dependencies": [
            "module.ec2.aws_route_table.public",
            "module.ec2.aws_subnet.a",
            "module.ec2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e68b4c7bf0d5286e",
            "route_table_id": "rtb-09f80c7d0ec5e211c",
            "subnet_id": "subnet-0aa6991f2bf5d9166"
          },
          "dependencies": [
            "module.ec2.aws_route_table.public",
            "module.ec2.aws_subnet.b",
            "module.ec2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06968432254c56663",
            "route_table_id": "rtb-09f80c7d0ec5e211c",
            "subnet_id": "subnet-0ca9f3dfb71c6ec0a"
          },
          "dependencies": [
            "module.ec2.aws_route_table.public",
            "module.ec2.aws_subnet.c",
            "module.ec2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "serverless",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474489807730:security-group/sg-0e02ae0eb62946712",
            "description": "Security group for Serverless functions",
            "egress": [],
            "id": "sg-0e02ae0eb62946712",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20221212043426585900000002",
            "name_prefix": "terraform-",
            "owner_id": "474489807730",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SecurityGroupServerless"
            },
            "tags_all": {
              "Name": "SecurityGroupServerless"
            },
            "timeouts": null,
            "vpc_id": "vpc-083069656b42e95cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474489807730:subnet/subnet-03b47e2d61d899fa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b47e2d61d899fa2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474489807730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetA"
            },
            "tags_all": {
              "Name": "SubnetA"
            },
            "vpc_id": "vpc-083069656b42e95cd"
          },
          "dependencies": [
            "module.ec2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474489807730:subnet/subnet-0aa6991f2bf5d9166",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa6991f2bf5d9166",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474489807730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetB"
            },
            "tags_all": {
              "Name": "SubnetB"
            },
            "vpc_id": "vpc-083069656b42e95cd"
          },
          "dependencies": [
            "module.ec2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474489807730:subnet/subnet-0ca9f3dfb71c6ec0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca9f3dfb71c6ec0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "474489807730",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetC"
            },
            "tags_all": {
              "Name": "SubnetC"
            },
            "vpc_id": "vpc-083069656b42e95cd"
          },
          "dependencies": [
            "module.ec2.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:474489807730:vpc/vpc-083069656b42e95cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fa1f201d6b50a010",
            "default_route_table_id": "rtb-02895d259ae0d7700",
            "default_security_group_id": "sg-09f9bef9d4a66a925",
            "dhcp_options_id": "dopt-0f3c07f5e9f223cb7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-083069656b42e95cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02895d259ae0d7700",
            "owner_id": "474489807730",
            "tags": {
              "Name": "VPC"
            },
            "tags_all": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}